# decision-tree-classifier

./: .gitignore  LICENSE  README.md
DecisionTreeClassifier/: .~lock.output.xlsx#  CMakeLists.txt  Makefile  Usage.py
DecisionTreeClassifier/cpp/: Criterion.cpp  Criterion.h  DecisionTreeClassifier.cpp  DecisionTreeClassifier.h  TreeNode.cpp  TreeNode.h  bindings.cpp
Old/: LeafNode.py  Makefile  Podtc.py  SplittingNode.py  Testing.py
Old/cpp/: gini.cpp  split.cpp
